# egg-day-worker

./: .env.example  .gitignore  config.py  db.py  e9k_scheduler.py  gen_report_image.py  main.py  player_data_collection.py  pyproject.toml  requirements.txt  update_sheet.py
deploy/: README.md  eggday-web.service  eggday-worker.service
fetchers/: egg9000.py
processors/: competition.py  gains.py  guilds.py  participants.py  scoring.py
reports/: community.py  final.py  image.py
scripts/: generate_final_reports.py  seed_fake_data.py
sheets/: registration.py  writer.py
tests/: conftest.py  test_guilds.py  test_participants.py  test_routes.py
web/: app.py  cache.py  filters.py  routes.py  service.py
web/static/: app.js  style.css
web/templates/: 404.html  base.html  guild.html  home.html  leaderboard.html  player.html
