[project]
name = "egg-day-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-auth>=2.0.0",
    "gspread>=6.0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0,<3",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "seaborn>=0.13.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
